widgets.datetimepicker: Fixed vertical alignment of page2 use button.

--- a/django_cradmin/static/django_cradmin/src/less/cradmin_base/datetimeselector.less
+++ b/django_cradmin/static/django_cradmin/src/less/cradmin_base/datetimeselector.less
@@ -23,7 +23,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background: rgba(0, 0, 0, .6);
+    background: @cradmin-datetimeselector-backdrop-bg;
     display: none;
   }
 
@@ -385,6 +385,10 @@
 
         .django-cradmin-datetime-selector-datepreview {
           margin-bottom: @cradmin-datetimeselector-horizontal-spacing;
+        }
+        .django-cradmin-datetime-selector-use-button {
+          margin-left: 5px;
+          vertical-align: bottom;
         }
       }
     }
