--- a/django_cradmin/static/django_cradmin/src/less/cradmin_base/variables.less
+++ b/django_cradmin/static/django_cradmin/src/less/cradmin_base/variables.less
@@ -239,6 +239,7 @@
 
 
 // Dateselector
+@cradmin-datetimeselector-backdrop-bg: rgba(0, 0, 0, .6);
 @cradmin-datetimeselector-page-bg: #fff;
 @cradmin-datetimeselector-page-bottom-xs: 0;
 @cradmin-datetimeselector-page-bottom: 10px;
